--- a/apps/idea2-static-site-test-app/index.html
+++ b/apps/idea2-static-site-test-app/index.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/client-config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
