Add tailwind to the test app.

--- a/apps/test-app/index.html
+++ b/apps/test-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>AediStaticSiteTestApp</title>
+    <title>Aedi test app</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="/aedi/client-config.js"></script>
+    <script src="%VITE_CLIENT_CONFIG_DOMAIN%/aedi/client-config.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
